fix issue in blurred image

--- a/css/style.en.css
+++ b/css/style.en.css
@@ -820,7 +820,7 @@ body {
 .my-information {
   padding: 90px 0;
 }
-.my-information .my-image img {
+.my-information .my-image-portrait img {
   opacity: 0.7;
   -webkit-transition: all 0.25s ease-in-out 0s;
   -moz-transition: all 0.25s ease-in-out 0s;
@@ -828,7 +828,16 @@ body {
   -ms-transition: all 0.25s ease-in-out 0s;
   transition: all 0.25s ease-in-out 0s;
 }
-.my-information .my-image img:hover {
+.my-information .my-image img {
+  /* opacity: 0.7; */
+  opacity: 1;
+  -webkit-transition: all 0.25s ease-in-out 0s;
+  -moz-transition: all 0.25s ease-in-out 0s;
+  -o-transition: all 0.25s ease-in-out 0s;
+  -ms-transition: all 0.25s ease-in-out 0s;
+  transition: all 0.25s ease-in-out 0s;
+}
+.my-information .my-image-portrait img:hover {
   opacity: 1;
 }
 .my-information .kayo-info-detail h3 {
